# switcher

./: CMakeLists.txt  README.md
src/: gio.hpp  main.cpp  profile.cpp  profile.hpp  proxy.hpp  settings.cpp  settings.hpp  switcher.cpp  switcher.hpp  switcherd.cpp
systemd/: switcher.service  switcherd.service
